feat(kpi): 支持同设备版本对比
